# programmiersprachen-aufgabe-1-2019

./: Aufgabe_1.3.cpp  Aufgabe_1.4.md  Aufgabe_1.5.md  Aufgabe_1.6.md  Aufgabe_1.7.md
source/: Aufgabe_1.10.cpp  Aufgabe_1.11.cpp  Aufgabe_1.12.cpp  Aufgabe_1.13.cpp  Aufgabe_1.14.cpp  Aufgabe_1.3.cpp  Aufgabe_1.4.md  Aufgabe_1.5.md  Aufgabe_1.6.md  Aufgabe_1.7.md  Aufgabe_1.9.cpp  CMakeLists.txt  Glossar.txt  mile_to_kilometer.cpp  tests.cpp
